sumo/tests/traci/VariableRetrieval/Junction/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 169 255 1/1
simstep 6 1
